platform/gitops/kustomize/applications/online-boutique/frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: aws-eks-devsecops-platform
spec:
  selector:
    matchLabels:
      app: frontend
      app.kubernetes.io/part-of: aws-eks-devsecops-platform
  strategy:
    blueGreen:
      activeService: frontend-active
      previewService: frontend-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 300
      postPromotionAnalysis:
        templates:
          - templateName: success-rate-check
        args:
          - name: service-name
            value: frontend
          - name: pod-template-hash
            valueFrom:
              podTemplateHashValue: Latest
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: aws-eks-devsecops-platform
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      terminationGracePeriodSeconds: 5
      containers:
        - name: frontend
          image: gcr.io/google-samples/microservices-demo/frontend:v0.10.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
                - name: Cookie
                  value: shop_session-id=x-readiness-probe
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
                - name: Cookie
                  value: shop_session-id=x-liveness-probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
